# frakkas

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  assimp.cmake  imgui.ini  jolt.cmake  launcher.rc  scene_udl.xml
editor/: CMakeLists.txt  CMakelists.txt
editor/include/Editor/: editor_render.hpp  hierarchy.hpp  inspector.hpp  resource_viewer.hpp
editor/include/editor/: console.hpp  debugger.hpp  editor_render.hpp  file_browser.hpp  game.hpp  game_scene.hpp  hierarchy.hpp  inspector.hpp  menu_bar.hpp  resources_viewer.hpp  scene.hpp
editor/include/helpers/: drop_component.hpp  game_edit.hpp
editor/src/: console.cpp  debugger.cpp  editor_render.cpp  file_browser.cpp  game.cpp  game_scene.cpp  hierarchy.cpp  inspector.cpp  main.cpp  menu_bar.cpp  resource_viewer.cpp  scene.cpp
editor/src/editor/: console.cpp  debugger.cpp  editor_render.cpp  file_browser.cpp  game_scene.cpp  hierarchy.cpp  inspector.cpp  menu_bar.cpp  resources_viewer.cpp  scene.cpp
editor/src/helpers/: game_edit.cpp
engine/: CMakeLists.txt  clone.kk
engine/include/: data_descriptor.hpp  engine.hpp  log.hpp  properties.hpp  singleton.hpp  threadpool.hpp
engine/include/Engine/: Singleton.hpp  entity_manager.hpp  foo.hpp
engine/include/animation/: animation_graph.hpp  animator.hpp
engine/include/debug/: log.hpp
engine/include/engine/: engine_entity.hpp  entity_manager.hpp  model.hpp  scene.hpp  serializer.hpp
engine/include/game/: camera_component.hpp  component.hpp  component_generator.hpp  drawable.hpp  engine_entity.hpp  entity.hpp  entity_container.hpp  entity_manager.hpp  inputs_manager.hpp  light_component.hpp  sound_component.hpp  time_manager.hpp  transform.hpp  world.hpp
engine/include/game/collider/: box_collider.hpp  collider.hpp
engine/include/game/component/: camera.hpp  (+2 more)
engine/include/helpers/: editor_helpers.hpp  path_constants.hpp  string_helpers.hpp
engine/include/multithread/: task.hpp  threadpool.hpp
engine/include/physic/: contact_listener.hpp  layers.hpp  physic_scene.hpp  simple_layers.hpp
engine/include/physics/: transform.hpp
engine/include/renderer/: graph.hpp  light.hpp  model.hpp  point.hpp  render_object.hpp  screen.hpp  skeletal_model.hpp
engine/include/resources/: mesh.hpp  program_shader.hpp  resource.hpp  resources_manager.hpp  scene.hpp  serializer.hpp  skeletal_animation.hpp  skeletal_mesh.hpp  sound.hpp  texture.hpp
engine/include/ui/: canvas.hpp
engine/include/utils/: dragdrop_constants.hpp  enum_array.hpp  inputs_enum.hpp  normalize_filepath.hpp  platform.hpp  properties.hpp  singleton.hpp  string_format.hpp  update_flags.hpp
engine/shaders/: animation.vs  basic.fs  basic.vs  light_depth.vs  point.fs  point.vs  postprocess.fs  postprocess.vs  screen.fs
engine/src/: engine.cpp  entity_manager.cpp  foo.cpp  log.cpp  main.cpp  serializer.cpp  threadpool.cpp
engine/src/animation/: animation_graph.cpp  animator.cpp
engine/src/debug/: log.cpp
engine/src/engine/: engine_entity.cpp  entity_manager.cpp  model.cpp  serializer.cpp
engine/src/game/: camera_component.cpp  component.cpp  component_generator.cpp  component_template.cpp  drawable.cpp  engine_entity.cpp  entity.cpp  entity_manager.cpp  inputs_manager.cpp  light_component.cpp  sound_component.cpp  time_manager.cpp  transform.cpp  world.cpp
engine/src/helpers/: editor_helpers.cpp
engine/src/multithread/: threadpool.cpp
engine/src/physic/: contact_listener.cpp  layers.cpp  physic_scene.cpp
engine/src/renderer/: graph.cpp  light.cpp  model.cpp  point.cpp  render_object.cpp  screen.cpp  skeletal_model.cpp
engine/src/resources/: mesh.cpp  program_shader.cpp  resources_manager.cpp  serializer.cpp  skeletal_animation.cpp  skeletal_mesh.cpp  sound.cpp  texture.cpp
engine/src/ui/: canvas.cpp
game/: CMakeLists.txt
game/assets/: copy.kk  exemple_scene.kk  map1.fbx  new_scene.kk  physic.kk
game/assets/Maps/: Dark_map.fbx  Desert_map.fbx  Forest_map.fbx  Menu_map.fbx  Winter_map.fbx
game/assets/Scenes/: dark.kk  desert.kk  exemple_scene.kk  forest.kk  menu.kk  model_zoo.kk  physic.kk  snow.kk  zoo.kk
game/assets/Scripts/: enemy_mesh_rotation.cpp  enemy_mesh_rotation.hpp  enemy_stats.cpp  enemy_stats.hpp  enemy_weapon.cpp  enemy_weapon.hpp  follow_camera.cpp  follow_camera.hpp  fps_movement.cpp  fps_movement.hpp  game_over_trigger.cpp  game_over_trigger.hpp  golem.cpp  golem.hpp  level_selector.cpp  level_selector.hpp  life.cpp  life.hpp  life_item.cpp  life_item.hpp  menu_script.cpp  menu_script.hpp  pause_trigger.cpp  pause_trigger.hpp  physic_ball_object.cpp  physic_ball_object.hpp  physic_ball_trigger.cpp  physic_ball_trigger.hpp  physic_goal_trigger.cpp  physic_goal_trigger.hpp  physic_player.cpp  physic_player.hpp  player.cpp  player.hpp  player_animation.cpp  player_animation.hpp  player_mesh_rotation.cpp  player_mesh_rotation.hpp  player_movement.cpp  player_movement.hpp  (+10 more)
game/assets/scripts/: collider_creator.cpp  collider_creator.hpp  follow_camera.cpp  follow_camera.hpp  fps_movement.cpp  golem.hpp  player.cpp  player.hpp  player_movement.cpp  player_movement.hpp  rumble_trigger.cpp  rumble_trigger.hpp  skeleton.hpp  spawner.hpp
game/include/: bar.hpp  behavior_base.hpp  register_components.hpp  world_data.hpp
game/include/game/: bar.hpp  follow_camera.hpp  fps_movement.hpp  new_component.hpp  player_movement.hpp  register_components.hpp  world.hpp  world_data.hpp
game/src/: bar.cpp  behavior_base.cpp  follow_camera.cpp  fps_movement.cpp  new_component.cpp  world.cpp
game/src/game/: bar.cpp  component_register.cpp  follow_camera.cpp  fps_movement.cpp  player_movement.cpp  world.cpp
launcher/: CMakeLists.txt  launcher.cpp
maths/: CMakeLists.txt  main.cpp
maths/include/: basics.hpp  constants.hpp  maths.hpp  matrix4.hpp  quaternion.hpp  utils.hpp  vector2.hpp  vector3.hpp  vector4.hpp
maths/include/maths/: constants.hpp  matrix4.hpp  quaternion.hpp  referential.hpp  utils.hpp  vector2.hpp  vector3.hpp  vector4.hpp
maths/inline/: basics.inl  matrix4.inl  quaternion.inl  referential.inl  utils.inl  vector2.inl  vector3.inl  vector4.inl
(+174 files in other folders)
